# Project-ChipImgProc

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  config.cmd  doc.cfg
.gitlab/issue_templates/: Discussion.md  Feature.md  Task-bug.md  Task-implementaion.md  Task-mock.md  Task-test.md
client_project/: Makefile  main.cpp  make_layout.hpp
cmake/: ChipImgProcConfig.cmake.in  Config.cmake.in  app.cmake  bundle.cmake.in  c_cpp_properties.json.in  compiler.cmake  cpack.cmake  dependencies.cmake  doc.cmake  install.cmake  options.cmake  packages.cmake  src.cmake  unit_test.cmake  version.cmake
cmake/src/: ChipImgProc.cmake  __template.cmake
cmake/src/ChipImgProc/: hough_transform.cmake  logger.cmake  utils.cmake
cmake/src/Example/: __template.cmake  aruco_detection.cmake  image_stitch_and_extraction.cmake
cmake/unit_test/: __template.cmake
doc/: chipimgproc.css  header.tex  manual.md
doc/images/: tutorial_gallery.pptx
doc/modules/: a-toy-example.md  aruco_marker_detection.dox  aruco_marker_detection.md  bright-field-marker-detection.md  fluorescence-marker-detection.md  full_package_tutorial.md  image-feature-extraction.md  image-gridding.md  image-rotation-angle-estimation-and-calibration.md  image-stitching.md  index.md  installation.md  intro_of_chip_image_process.dox  introduction.md  probe-intensity-extraction.md
doc/modules/original/: full_guide_tutorial.md
include/: ChipImgProc.h
include/ChipImgProc/: aruco.hpp  const.h  coordinate_fix.hpp  grid_invl_est.hpp  grid_raw_img.hpp  gridding.hpp  histogram.hpp  hough_transform.hpp  logger.hpp  margin.hpp  marker_layout.hpp  min_cv_auto_margin.hpp  multi_tiled_mat.hpp  multi_warped_mat.hpp  obj_mat.hpp  optional.hpp  points.hpp  range.hpp  rotation.hpp  sharpness.h  tiled_mat.hpp  tiled_roi.hpp  utils.h  version.h  warped_mat.hpp
src/: ChipImgProc.cpp  utils.cpp
src/ChipImgProc/: hough_transform.cpp  sharpness.cpp  stitch.cpp  utils.cpp
src/Example/: aruco_detection.cpp  image_rotation_and_gridding.cpp  image_rotatoin.cpp  image_rotatoin_and_gridding.cpp  image_stitch_and_extraction.cpp  toy-example.cpp
src/cpp-base64/: base64.cpp
src/cpp_base64/: base64.cpp
unit_test/: base64_pressure_test.cpp
unit_test/ChipImgProc/: aruco_test.cpp  gridding_test.cpp  histogram_test.cpp  hough_transform_test.cpp  make_layout.hpp  multi_tiled_mat_test.cpp  multi_warped_mat_test.cpp  warped_mat_test.cpp
unit_test/data/: aruco_db.json  aruco_default_dict_6x6_250.json  aruco_frame_mask.tiff  aruco_frame_template.tiff  aruco_marker_layout.json  zion_pat.tiff  zion_pat.tsv  zion_pat_265px.tif  zion_pat_295px.tif
(+160 files in other folders)
